# aurora

./: .gitignore  AGENTS.md  CLAUDE.md  CODEOWNERS  Cargo.toml  DEVELOPMENT.md  Makefile  README-architecture-index.md  README.md  architecture.md  backend-capability-matrix.md  build.rs  data-architecture.md  distributed-runtime-strategy.md  execution-routing-spec.md  lakehouse-compatibility-spec.md  observability-and-ui-architecture.md  performance-benchmark-plan.md  pyproject.toml  python-api-architecture.md  semantic-layer-spec.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: ci.yml
aurora/api/: __init__.py  dataframe.py  errors.py  session.py
aurora/backends/datafusion/: adapter.py
aurora/core/backend/: capabilities.py  fallback.py  registry.py  traits.py
aurora/core/observability/: __init__.py  events.py  metrics.py
aurora/core/routing/: cost_model.py  planner.py
aurora/tests/: test_backend_registry.py  test_capabilities.py  test_datafusion_adapter.py  test_fallback_policy.py  test_observability_events.py  test_observability_metrics.py  test_package_imports.py  test_phase0_end_to_end.py  test_routing_score.py  test_session_routing.py  test_smoke.py
docs/plans/: 2026-03-01-aurora-phase0-implementation.md
proto/: spark_connect.proto
proto/spark/connect/: base.proto
scripts/: plan_eval.py  pyspark_range_matrix.py
src/: distributed.rs  engine.rs  main.rs  server.rs
