[package]
name = "aurora"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
polars = { version = "0.46", features = ["lazy", "fmt", "strings", "dtype-date", "dtype-datetime", "json", "csv", "sql"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prost = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tonic = { version = "0.12", features = ["transport"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
pretty_assertions = "1"
