[package]
name = "aurora-spark-connect-polars"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-stream = "0.3"
futures = "0.3"
polars = { version = "0.45", default-features = false, features = ["lazy", "parquet", "csv", "sql", "fmt", "dtype-date", "dtype-datetime", "strings"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs"] }
tokio-stream = "0.1"
prost = "0.13"
tonic = { version = "0.12", features = ["transport"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[build-dependencies]
tonic-build = "0.12"
prost-build = "0.13"

[dev-dependencies]
tempfile = "3"
